--- a/src/TcpFile.Demo/TcpFile.Demo.csproj
+++ b/src/TcpFile.Demo/TcpFile.Demo.csproj
@@ -20,7 +20,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\bin\Debug\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -30,7 +30,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\bin\Release\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -128,10 +128,9 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SiS.Communication\SiS.Communication.csproj">
-      <Project>{91ba755b-d3cd-47b7-9990-ac2749ec84bb}</Project>
+      <Project>{207ca660-0c1b-47b2-957f-d06f661e9383}</Project>
       <Name>SiS.Communication</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
