A lot of modifications have been made to the tcp model transmission, make it easier to use.

--- a/src/SiS.Communication.Demo/SiS.Communication.Demo.csproj
+++ b/src/SiS.Communication.Demo/SiS.Communication.Demo.csproj
@@ -38,7 +38,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -67,6 +67,7 @@
       <DependentUpon>HttpView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Http\HttpViewModel.cs" />
+    <Compile Include="JsonSerializer.cs" />
     <Compile Include="Process\ShareMemoryDuplexViewModel.cs" />
     <Compile Include="Process\ShareMemoryViewModel.cs" />
     <Compile Include="Process\PipeViewModel.cs" />
@@ -75,7 +76,6 @@
       <DependentUpon>TcpGroupView.xaml</DependentUpon>
     </Compile>
     <Compile Include="TcpBasic\TcpBasicViewModel.cs" />
-    <Compile Include="TcpModel\JsonModelMessageConvert.cs" />
     <Compile Include="TcpModel\QueryServerTimeResponse.cs" />
     <Compile Include="TcpModel\QueryServerTimeRequest.cs" />
     <Compile Include="TcpModel\ServerMessage.cs" />
