--- a/src/TcpFile.Demo/TcpFile.Demo.csproj
+++ b/src/TcpFile.Demo/TcpFile.Demo.csproj
@@ -38,7 +38,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -64,7 +64,7 @@
     <Compile Include="Client\ClientWnd.xaml.cs">
       <DependentUpon>ClientWnd.xaml</DependentUpon>
     </Compile>
-    <Compile Include="JsonModelMessageConvert.cs" />
+    <Compile Include="JsonSerializer.cs" />
     <Compile Include="Protocol\ChatMessage.cs" />
     <Compile Include="Protocol\CommonDefine.cs" />
     <Compile Include="Protocol\UploadFileCancelResponse.cs" />
